updated to show links as intended

--- a/music_library_database_app/views/albums.erb
+++ b/music_library_database_app/views/albums.erb
@@ -5,8 +5,7 @@
     <% @albums.each do |album| %>
     
       <div>
-        Title: <%= album[0] %>
-        Released: <%= album[1] %>
+        <a href="/albums/<%= album.id %>"><%= album.title %></a>
       </div>
     <% end %>
   </body>
