postcode checker debugged

--- a/projects_to_debug/postcode_checker_app/views/index.erb
+++ b/projects_to_debug/postcode_checker_app/views/index.erb
@@ -8,7 +8,8 @@
   <h1>Postcode Checker</h1>
 
   <form action="/check" method="POST">
-    <input type="text" name="post_code" />
+    <%# this was name="post_code" %>
+    <input type="text" name="postcode" />
 
     <input type="submit" />
   </form>
