handle mutli line string in test file and add "Rickroll proof!"

--- a/projects_to_debug/unsecure_app/views/index.erb
+++ b/projects_to_debug/unsecure_app/views/index.erb
@@ -6,6 +6,7 @@
 </head>
 <body>
   <h1>Greeter app</h1>
+  <h2>*NEW* Rickroll-proof version</h2>
 
   <form action="/hello" method="POST">
     Please enter your name: 
